--- a/env.example
+++ b/env.example
@@ -2,10 +2,6 @@
 # Get your bot token from @BotFather on Telegram
 BOT_TOKEN=your_telegram_bot_token_here
 
-# OpenRouter AI Configuration
-# Get your API key from https://openrouter.ai/
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-
 # Firebase Configuration (Optional)
 # Path to your Firebase service account credentials file
 FIREBASE_CREDENTIALS_PATH=firebase-credentials.json
@@ -15,9 +11,13 @@ FIREBASE_CREDENTIALS_PATH=firebase-credentials.json
 # FIREBASE_CREDENTIALS_JSON={"type":"service_account","project_id":"your-project-id",...}
 
 # Optional: Logging Configuration
-# LOG_LEVEL=INFO
+LOG_LEVEL=INFO
 # LOG_FILE=bot.log
 
 # Optional: Rate Limiting Configuration
-# RATE_LIMIT_WINDOW=60
-# MAX_REQUESTS_PER_WINDOW=30 
+RATE_LIMIT_WINDOW=60
+MAX_REQUESTS_PER_WINDOW=30
+
+# Optional: Cache Configuration
+MAX_CACHE_SIZE=1000
+MAX_FILE_SIZE_MB=10 
