--- a/env.example
+++ b/env.example
@@ -2,6 +2,10 @@
 # Get your bot token from @BotFather on Telegram
 BOT_TOKEN=your_telegram_bot_token_here
 
+# AI Configuration (Optional)
+# Get your API key from https://openrouter.ai/
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+
 # Firebase Configuration (Optional)
 # Path to your Firebase service account credentials file
 FIREBASE_CREDENTIALS_PATH=firebase-credentials.json
