--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ python-telegram-bot==20.7
 python-dotenv==1.0.0
 firebase-admin==6.2.0
 pathlib2==2.3.7
-requests==2.31.0 
+requests==2.31.0
+aiohttp==3.9.1 
