Update AI integration to use Mistral 7B model with optimized prompts

--- a/env.example
+++ b/env.example
@@ -4,6 +4,7 @@ BOT_TOKEN=your_telegram_bot_token_here
 
 # AI Configuration (Optional)
 # Get your API key from https://openrouter.ai/
+# Uses Mistral 7B model for meal plan generation
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # Firebase Configuration (Optional)
